<resources>
    <string name="app_name">Road Safety Watch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="content_description_app_logo">App Logo</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_text_login">Login</string>
    <string name="btn_text_sign_up">SIgn Up</string>
    <string name="hint_user_name">User Name</string>
    <string name="incident_over_speeding">Over Speeding</string>
    <string name="incident_over_loading">Over Loading</string>
    <string name="incident_drunken_driving">Drunken Driving</string>
    <string name="incident_un_road_worthy_vehicle">Unroadworthy Vehicle</string>
    <string name="toolbar_tittle_road_incidents">Road Incidents</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="toolbar_tittle_report_incidents">Report Incident</string>
    <string name="hint_area_county">Area/ County</string>
    <string name="hint_type_of_vehicle">Type of Vehicle</string>
    <string name="hint_vehicle_number_plate">Vehicle Number Plate</string>
    <string name="hint_vehicle_destination">Vehicle Destination</string>
    <string name="btn_text_report_incident">Report</string>
    <string name="hint_incidents">Incident</string>
    <string name="toolbar_tittle_reported_road_incidents">Reported Incidents</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_account_type">account_type</string>
    <string name="user_account_type_default">user</string>
</resources>
