<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.reportIncident.ReportRoadIncidentFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_report_incidents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_report_incidents"
                style="@style/Widget.RoadSafetyWatch.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/toolbar_tittle_report_incidents"
                app:navigationIcon="@drawable/ic_arrow_back"/>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_incident"
            style="@style/Widget.RoadSafetyWatch.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_report_incidents">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_incident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_incidents"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_area_county"
            style="@style/Widget.RoadSafetyWatch.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_incident">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_area_county"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_area_county"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_type_of_vehicle"
            style="@style/Widget.RoadSafetyWatch.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_area_county">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_type_of_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_type_of_vehicle"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_vehicle_number_plate"
            style="@style/Widget.RoadSafetyWatch.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_type_of_vehicle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_vehicle_number_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vehicle_number_plate"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_vehicle_destination"
            style="@style/Widget.RoadSafetyWatch.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_vehicle_number_plate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_vehicle_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vehicle_destination"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_report_incident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:text="@string/btn_text_report_incident"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_vehicle_destination" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>